--- a/styles.css
+++ b/styles.css
@@ -73,18 +73,6 @@ p {
   margin: 10px;
 }
 
-#create-task-button {
-  background: #007fff;
-  color: white;
-  border: 0;
-  padding: 10px 25px;
-  text-transform: uppercase;
-  font-weight: bold;
-  border-radius: 5px;
-  margin: 10px;
-  cursor: pointer;
-}
-
 .container {
   width: 100%;
   height: 100vh;
@@ -207,7 +195,6 @@ h1:hover {
   height: 20px;
 }
 
-
 .task {
   display: flex;
   flex-direction: column;
@@ -220,6 +207,10 @@ h1:hover {
 
   min-height: 100px;
   box-shadow: 0px 3px 20px -1px rgba(0, 0, 0, 0.3);
+}
+
+.task.editing {
+  border: 2px dashed #c80000;
 }
 
 .controls {
@@ -258,7 +249,7 @@ body.night {
 
 .night #create-task-button {
   color: #fdfdfd;
-  background: #818181;
+  background: #577ea7;
 }
 
 .night .task {
@@ -308,4 +299,100 @@ body.night {
 
 .night #toggle-theme {
   background-image: url("./images/sun.svg");
+}
+
+.animation-in {
+  animation: appear-animation 300ms ease;
+}
+
+.animation-out {
+  animation:disappear-animation 300ms ease;
+  animation-fill-mode: forwards;
+}
+
+@keyframes appear-animation {
+  0% {
+    transform: rotateX(90deg)
+  }
+
+  100% {
+    transform: rotateX(0deg)
+  }
+}
+
+@keyframes disappear-animation {
+  0% {
+    transform: rotateX(0deg);
+  }
+
+  100% {
+    transform: rotateX(90deg);
+    display: none;
+  }
+}
+
+.button-block {
+  display: flex;
+  margin: 10px 5px;
+}
+
+.input-field {
+  margin: 0;
+  width: 100%;
+  display: flex;
+  position: relative;
+}
+
+#create-task-button {
+  background: #007fff;
+  color: white;
+  border: 0;
+  padding: 8px 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+}
+
+#create-task-button:hover {
+  background: #4ba5ff;
+}
+
+#create-task-button img {
+  height: 20px;
+}
+
+#create-task-input{
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-right: none;
+  border-radius: 5px 0 0 5px;
+  padding: 10px;
+  width: 100%;
+  outline: none;
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.2) inset;
+}
+
+#voice-input-button{
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  background: url('./images/microphone.svg');
+  background-repeat: no-repeat;
+  background-size: 80%;
+  background-position: center 7px;
+  position: absolute;
+  right: 0;
+  height: 100%;
+  width: 30px;
+}
+
+#voice-input-button.active {
+  background: url('./images/microphone-active.svg');
+  background-repeat: no-repeat;
+  background-size: 80%;
+  background-position: center 7px;
+}
+
+#voice-input-button img {
+  height: 27px;
 }
